Hopefully fix flexbox padding on firefox?

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@
 
 
 table {
+    padding-top: inherit;
     table-layout: fixed;
 }
 
@@ -57,7 +58,6 @@ h3, h4 {
 
 .flexbox-align {
     padding-top: 40px;
-
     position: absolute;
     width: 100%;
     height: 100%;
@@ -65,3 +65,4 @@ h3, h4 {
     align-items: center;
     justify-content: center;
 }
+
